--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.88.7",
+    "@react-three/fiber": "^8.15.8",
+    "@studio-freight/lenis": "^1.0.27",
+    "framer-motion": "^10.16.4",
+    "framer-motion-3d": "^10.16.4",
+    "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.0"
+    "sass": "^1.69.5",
+    "tailwind-merge": "^1.14.0",
+    "three": "^0.158.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
